修改历史记录标题

--- a/app/src/main/res/layout/item_his_chat.xml
+++ b/app/src/main/res/layout/item_his_chat.xml
@@ -16,8 +16,10 @@
         <TextView
             android:id="@+id/saveText"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_height="30dp"
             android:layout_margin="5dp"
+            android:gravity="center"
+            android:textAlignment="center"
             android:text="保存文本、保存文本、保存文本、保存文本、保存文本、保存文本、保存文本、保存文本、保存文本、保存文本、保存文本、保存文本、保存文本"
             tools:ignore="HardcodedText"
             android:textColor="@color/black_HW"
