--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,60 @@
         tools:ignore="MissingConstraints"
         tools:listitem="@layout/item_message"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/userPlay"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="3dp"
+            android:background="@drawable/user_message_bubble"
+            android:text="播放"
+            android:textSize="18sp"
+            android:textColor="@color/textColor"
+            tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/userStop"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="3dp"
+            android:background="@drawable/user_message_bubble"
+            android:text="停止"
+            android:textSize="18sp"
+            android:textColor="@color/textColor"
+            tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/userPronunciation"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="3dp"
+            android:background="@drawable/user_send_english"
+            android:text="发音人"
+            android:textSize="18sp"
+            android:textColor="@color/textColor"
+            tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/userSetting"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="3dp"
+            android:background="@drawable/user_message_bubble"
+            android:text="设置"
+            android:textSize="18sp"
+            android:textColor="@color/textColor"
+            tools:ignore="HardcodedText" />
 
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/bottom_message_operator"
@@ -128,6 +181,15 @@
             android:textSize="18sp"
             android:textColor="@color/textColor"
             tools:ignore="HardcodedText" />
+
     </LinearLayout>
+
+
+    <!--    用于接收消息并转化成语音-->
+    <TextView
+        android:id="@+id/tts_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
 </LinearLayout>
