--- a/app/src/main/res/layout/item_his_chat.xml
+++ b/app/src/main/res/layout/item_his_chat.xml
@@ -16,7 +16,8 @@
         <TextView
             android:id="@+id/saveText"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
             android:layout_margin="5dp"
             android:gravity="center"
             android:textAlignment="center"
